--- a/public/me/index.html
+++ b/public/me/index.html
@@ -32,6 +32,7 @@
     </div>
     <i class="fas fa-lightbulb light" id="switch" onclick="switched(this)"></i>
     
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
