--- a/public/error/index.html
+++ b/public/error/index.html
@@ -48,21 +48,21 @@
 <body onload="onload()">
     <div id="navTop">
         <a class="nav link" href="/">
-            <img src="https://cdn.glitch.com/3f2aa87c-0707-4d16-b533-62cb0b69db35%2FDiscord%20Bot%20List%20Icon%20-%20Large%202.png?1543200818856">
+            <img src="/logo.png">
 
             <span class="navtag">
           <span class="navtext">Discord Bot List</span>
             <svg class="arrow" viewbox="0 0 18 35" xmlns="http://www.w3.org/2000/svg"><g id="Symbols" fill="none" fill-rule="evenodd"><g id="community/header" fill="#3369E6"><g id="Group-13"><g id="Group-2"><path id="Combined-Shape-Copy" d="M1.8537 34.7643l15.5597-17.268L1.8537 0H0l15.5597 17.4964L0 34.7644z"></path></g></g></g></g></svg>
             </span>
         </a>
-        <a class="navtag search" id="searcher">
+        <a class="navtag search" id="searcher" href="/search/">
             <img id="searchimg" src="/search.png" width="26px" height="26px">
-            <div class="navtext" id="search" contenteditable="true" placeholder="Search" onkeypress="return (this.innerText.length <= 40)"></div>
+            <div class="navtext" id="search">Search</div>
         </a>
         <span class="dropdown">
         <a class="navtag" id="login" href="/api/discord/login">Login</a>
         <span class="dd-content">
-          <a href="https://discord.gg/PA9EYba" target="_blank">Join Server</a><br />
+          <a href="/join" target="_blank">Join Server</a><br />
           <a href="/add">Add bot</a><br />
           <a href="/theme">Toggle Theme</a><br />
           <a href="/logout">Logout</a>
