--- a/public/success/index.html
+++ b/public/success/index.html
@@ -6,11 +6,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Just another bot list for discord..." />
     <meta name="description" content="Just another bot list for discord..." />
-    <meta name="og:image" content="https://cdn.glitch.com/923d0d4c-ddf5-4822-8cd7-b12b2c8bb20c%2Frandombot.png?1535715799649" />
+    <meta name="og:image" content="/assets/logo.png" />
     <meta name="theme-color" content="#d2efe6" />
     <link href="https://fonts.googleapis.com/icon?family=Markazi+Text" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.glitch.com/923d0d4c-ddf5-4822-8cd7-b12b2c8bb20c%2Frandombot.png?1535715799649" />
+    <link rel="shortcut icon" type="image/png" href="/assets/logo.png" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script src="/main/script.js"></script>
     <link href="/main.css" rel="stylesheet">
