added a website link githubrepo and support server

--- a/src/public/add/index.html
+++ b/src/public/add/index.html
@@ -75,6 +75,21 @@
             </div>
             <br>
             <div class="input-holder">
+                <input maxlength="120" class="input" id="supportServer" type="text" placeholder=" ">
+                <div class="placeholder">support Server</div>
+            </div>
+            <br>
+            <div class="input-holder">
+                <input class="input" id="GithubRepo" type="text" placeholder=" ">
+                <div class="placeholder">Github Repo</div>
+            </div>
+            <br>
+            <div class="input-holder">
+                <input class="input" id="Website"></input>
+                <div class="textarea-placeholder"> Bot Website</div>
+            </div>
+            <br>
+            <div class="input-holder">
                 <textarea class="input" id="longdesc" rows="7"></textarea>
                 <div class="textarea-placeholder">Long Description - Supports <a target="_blank" href="https://guides.github.com/features/mastering-markdown/">Markdown</a></div>
             </div>
